@@ -1,14 +1,5 @@
 <?xml version="1.0"?>
 <object name="portal_javascripts" meta_type="JavaScripts Registry">
 
-    <javascript 
-        cacheable   ="True" 
-        compression ="safe" 
-        cookable    ="True"
-        enabled     ="True" 
-        expression  ="python: here.restrictedTraverse('@@image-editor-utility').should_include(request)"
-        id          ="++resource++jquery.imgareaselect-0.8.min.js"
-        inline      ="False"
-        />
 
 </object>
