@@ -1,30 +1,5 @@
 <?xml version="1.0"?>
 <object name="portal_css">
 	
-    <stylesheet 
-        title       ="" 
-        cacheable   ="True" 
-        compression ="safe" 
-        cookable    ="True"
-        enabled     ="True" 
-        expression  ="python: here.restrictedTraverse('@@image-editor-utility').should_include(request)"
-        id          ="++resource++jquery.ui.all.css" 
-        media       ="screen"
-        rel         ="stylesheet" 
-        rendering   ="import"
-        remove      ="True"
-        />
-    <stylesheet 
-        title       ="" 
-        cacheable   ="True" 
-        compression ="safe" 
-        cookable    ="True"
-        enabled     ="True" 
-        expression  ="python: here.restrictedTraverse('@@image-editor-utility').should_include(request)"
-        id          ="++resource++imageeditor-style.css" 
-        media       ="screen"
-        rel         ="stylesheet" 
-        rendering   ="import"
-        remove      ="True"
-        />
+
 </object>
