@@ -1,4 +1,4 @@
 <?xml version="1.0"?>
 <metadata>
-    <version>5</version>
+    <version>6</version>
 </metadata>
